# python_template

./: .gitignore  .isort.cfg  .mypy.ini  .pylintrc  README.md  pyproject.toml
.github/workflows/: python-app.yml
app/tests/: test_dummy.py
